# embedded-service-framework

./: .gitignore  .gitmodules  CMakeLists.txt
.devcontainer/: devcontainer.json
.github/workflows/: on_pr_job.yml
docker/: compose.yml  dev.dockerfile
docs/: arch.dsl  stream_flow.dio
host/: CMakeLists.txt
host/include/: host.hpp
host/tests/: CMakeLists.txt
host/tests/src/: ut_host.cpp
ipc/: CMakeLists.txt
ipc/api/: CMakeLists.txt
ipc/api/include/: api_message_reader.hpp  api_message_writer.hpp  api_request_reader.hpp  api_response_writer.hpp
ipc/api/tests/: CMakeLists.txt
ipc/api/tests/src/: ut_api_message_reader.cpp  ut_api_message_writer.cpp  ut_api_request_reader.cpp  ut_api_response_writer.cpp
ipc/include/: data_writer.hpp  ipc_data_reader.hpp
ipc/nanopb/: CMakeLists.txt
ipc/nanopb/include/: nanopb_message_reader.hpp  nanopb_message_writer.hpp
ipc/nanopb/tests/: CMakeLists.txt
ipc/nanopb/tests/res/: test.proto
ipc/nanopb/tests/src/: ut_nanopb_message_reader.cpp  ut_nanopb_message_writer.cpp
ipc/package/: CMakeLists.txt
ipc/package/include/: input_stream.hpp  ipc_queue.hpp  package_header.hpp  package_header_parser.hpp  package_header_serializer.hpp  package_reader.hpp  package_writer.hpp  ring_buffer_input_stream.hpp  ring_queue.hpp
ipc/package/tests/: CMakeLists.txt
ipc/package/tests/src/: ut_package_reader.cpp  ut_package_writer.cpp  ut_ring_buffer_input_stream.cpp  ut_ring_queue.cpp
ipc/package/util/: CMakeLists.txt
ipc/package/util/tests/: CMakeLists.txt
processor/: CMakeLists.txt
processor/include/: data_consumer.hpp  data_producer.hpp  data_transformer.hpp  processor.hpp  relationship.hpp
processor/tests/: CMakeLists.txt
processor/tests/src/: ut_processor.cpp
queue/: CMakeLists.txt
queue/include/: queue.hpp  ring_queue.hpp
queue/tests/: CMakeLists.txt
queue/tests/src/: ut_ring_queue.cpp
service/: CMakeLists.txt
service/asynchronous_drive_service/: CMakeLists.txt
service/asynchronous_drive_service/include/: asynchronous_drive_request.hpp  asynchronous_drive_response.hpp  asynchronous_drive_service.hpp
service/asynchronous_drive_service/tests/: CMakeLists.txt
service/asynchronous_drive_service/tests/src/: ut_asynchronous_drive_service.cpp
service/gateway_service/: CMakeLists.txt
service/gateway_service/tests/src/: ut_gateway_service.cpp
service/motor_drive_service/: CMakeLists.txt
service/motor_drive_service/include/: motor_drive_service.hpp  motor_drive_service_api_request.hpp  motor_drive_service_api_response.hpp  motor_drive_service_types.hpp
service/motor_drive_service/tests/: CMakeLists.txt
service/motor_drive_service/tests/src/: ut_motor_drive_service.cpp
services/: CMakeLists.txt
services/cnc_service/: CMakeLists.txt
services/cnc_service/include/: circular_movement_data.hpp  cnc_data.hpp  cnc_service.hpp  cnc_service_api_request.hpp  cnc_service_api_response.hpp  linear_movement_data.hpp  linear_movement_model.hpp
services/cnc_service/tests/: CMakeLists.txt
services/cnc_service/tests/src/: ut_cnc_service.cpp
services/gateway_service/: CMakeLists.txt
services/gateway_service/include/: gateway_service.hpp  gateway_service_api_request.hpp  gateway_service_api_response.hpp  gateway_service_types.hpp
services/gateway_service/tests/: CMakeLists.txt
services/gateway_service/tests/src/: ut_gateway_service.cpp
