add_library(ring_buffer_input_stream INTERFACE)
target_include_directories(ring_buffer_input_stream INTERFACE ${CMAKE_CURRENT_LIST_DIR}/include)
target_link_libraries(ring_buffer_input_stream INTERFACE input_stream)

add_library(package_header_parser INTERFACE)
target_include_directories(package_header_parser INTERFACE ${CMAKE_CURRENT_LIST_DIR}/include)
target_link_libraries(package_header_parser INTERFACE package_header)

add_library(package_header_serializer INTERFACE)
target_include_directories(package_header_serializer INTERFACE ${CMAKE_CURRENT_LIST_DIR}/include)
target_link_libraries(package_header_serializer INTERFACE package_header)

if(BUILD_TESTS)
    add_subdirectory(tests)
endif()